<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_default"
    tools:context=".informacionrover">

    <TextView
        android:id="@+id/txvnombrerover"
        android:layout_width="310dp"
        android:layout_height="152dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quantico_bold"
        android:text="Nombre del Rover"
        android:textAlignment="center"
        android:textColor="@color/colorTexto"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="211dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="36dp"
        android:background="@color/colorBotones"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/galeria"
        android:textAllCaps="false"
        android:textColor="@color/colorTexto"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcvcamaras"
        app:layout_constraintVertical_bias="0.587" />

    <ImageButton
        android:id="@+id/btnatras2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/flecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvcamaras"
        android:layout_width="243dp"
        android:layout_height="99dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="48dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/fechalanzamiento"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvfechaultimafoto"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="308dp"
        android:fontFamily="@font/quantico_bold"
        android:text="dd/mm/YY"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvfechaaterrizajedato"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/quantico_bold"
        android:text="dd/mm/YY"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="388dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/camaras"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvestado"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/quantico_bold"
        android:text="(in)activo"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/estado"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvfechalanzamientodato"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/quantico_bold"
        android:text="dd/mm/YY"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="205dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/fechaaterrizaje"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="308dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/ultimafoto"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/quantico_bold"
        android:text="@string/totalfotos"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvtotalfotos"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/quantico_bold"
        android:text="X"
        android:textColor="@color/colorTexto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>